# template

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  build_n_deploy.sh  flake.nix  package-lock.json  package.json  tsconfig.json
src/: index.ts  main.rs
src/lib/init/: env.ts  logger.ts
