cargo-features = ["codegen-backend"]

[package]
name = "template"
version = "0.1.0"
authors = ["Mach1212 <maciej.pruchnik@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
dioxus-logger = "0.5.1"
futures = "0.3.31"
async-recursion = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.132"
reqwest = { version = "0.12.9", default-features = false, features = [
  # "rustls-tls",
  "json",
] }
manganis = "0.2.2"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]

[profile.dev]
opt-level = 0

[build]
rustflags = [
  "-Clto",
  "-Zvirtual-function-elimination",
  "-Zlocation-detail=none",
]

# Same as in the Stable section
[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[target.x86_64-unknown-linux-gnu.profile.dev]
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[target.wasm32-unknown-unknown]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[unstable]
codegen-backend = true
build-std = ["std", "panic_abort", "core", "alloc"]
build-std-features = ["panic_immediate_abort"]
